# Enyo

./: .gitignore  CMakeLists.txt  README.md
doc/: main.cpp
src/: enyo.cpp  enyo.h
